Fix: .gnbItemBG z-index 수치 수정 및 트랜지션 속성 수정

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -13,7 +13,19 @@
   width: 100%;
   height: 100vh;
   background-color: transparent;
-  transition: top 0.2s ease-in-out, background-color 500ms ease-in;
+  transition: all 250ms ease;
+  opacity: 0;
+  visibility: hidden;
+
+  &.skinCare,
+  &.bodyHand,
+  &.hair,
+  &.perfume,
+  &.home {
+    z-index: 20;
+    opacity: 1;
+    visibility: unset;
+  }
 
   &.skinCare {
     background-color: $navSkin;
